test_cases/good/arrays_null.lat
int main() {
    int[] arr = null;
    if (arr == null)
        return 0;
    else
        return 1;
}
