test_cases/bad/undefined_type1.lat
int main() {
    foo x;
    return 0;
}
